# sqlgen

./: Cargo.toml  LICENSE.md  README.md  build-releases.sh
.github/workflows/: ci.yml
examples/postgres/aggregation/: schema.sql
examples/postgres/aggregation/golang/: queries.go
examples/postgres/aggregation/queries/: avg-monthly-cost-per-campaign-cte.sql  avg-monthly-cost-per-campaign-subquery.sql
examples/postgres/aggregation/typescript/: queries.ts
examples/postgres/migration/golang/: queries.go
examples/postgres/migration/migrations/: 001.up.sql  003.up.sql  004.up.sql
examples/postgres/migration/queries/: get-user-and-items.sql
examples/postgres/migration/typescript/: queries.ts
examples/postgres/simple/: schema.sql
examples/postgres/simple/golang/: queries.go
examples/postgres/simple/queries/: get_table_4.sql  get_table_5.sql  insert_table_4.sql  insert_table_5.sql
examples/postgres/simple/typescript/: queries.ts
examples/sqlite/aggregation/: schema.sql
examples/sqlite/aggregation/golang/: queries.go
examples/sqlite/aggregation/queries/: avg-monthly-cost-per-campaign-cte.sql  avg-monthly-cost-per-campaign-subquery.sql
examples/sqlite/aggregation/typescript/: queries.ts
examples/sqlite/migration/golang/: queries.go
examples/sqlite/migration/migrations/: 002.up.sql
examples/sqlite/migration/typescript/: queries.ts
examples/sqlite/simple/: schema.sql
src/: error.rs  lib.rs  main.rs
src/core/: argparse.rs  mod.rs  parse.rs
src/lang/: golang.rs  mod.rs  typescript.rs
tests/: core.rs
(+10 files in other folders)
