[package]
name = "sqlgen"
version = "0.1.0"
edition = "2021"
authors = ["Matt Clarson<clarsgon469@gmail.com>"]
description = "CLI tool for generating code from SQL schemas and queries"
readme = "README.md"
license = "MIT"
publish = false

[dev-dependencies]
pretty_assertions = "1.4.0"

[dependencies]
clap = { version = "4.4.1", features = ["derive"] }
sqlparser = "0.37.0"
